# be-auth

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  alembic.ini  app.db  docker-compose.yml  pyproject.toml
.github/workflows/: deploy-registry.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_add_users_and_refresh_tokens.py
infra/docker/: Dockerfile
src/api/: __main__.py  app.py  deps.py  lifespan.py  middleware.py
src/api/v1/: auth_router.py  routers.py
src/application/: dto.py  uow.py
src/application/use_cases/: auth_use_cases.py  register_use_cases.py
src/core/: config.py  db.py  errors.py  logging.py
src/domain/: entities.py  repositories.py  services.py
src/infrastructure/: uow_sqlalchemy.py
src/infrastructure/mq/: __init__.py  consumer.py  publisher.py
src/infrastructure/persistence/: mappers.py  models.py  repositories.py
