[project]
name = "be-auth"
version = "0.1.0"
description = "Auth service (FastAPI + SQLAlchemy + Alembic)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.13",
  "rich>=13.7",
]

[tool.alembic]
script_location = "alembic"

[tool.ruff]
line-length = 100

[tool.pyright]
typeCheckingMode = "basic"
